refactor: deprecate getCompletableStatuses as well